# internal/task/task_responses.go
@@ -1,0 +1,5 @@
+package task
+
+type TaskResponse struct {
+	Message string `json:"message"`
+}
